Fix booking branch, and detail booking branch function

--- a/src/app/booking-manage/dialog/transfer-booking-internal/transfer-booking-internal.component.html
+++ b/src/app/booking-manage/dialog/transfer-booking-internal/transfer-booking-internal.component.html
@@ -27,7 +27,7 @@
   <mat-form-field fxFlex="96%">
     <mat-label>{{'Saving_Account_Component.clientAdvanceCash.labelAmountAdvance' |translate}}</mat-label>
     <input required
-           currencyMask
+           currencyMask type="text"
            matInput formControlName="amountTransfer">
   </mat-form-field>
 
