--- a/src/app/booking-manage/view-internal-booking/internal-booking-tab/internal-booking-tab.component.html
+++ b/src/app/booking-manage/view-internal-booking/internal-booking-tab/internal-booking-tab.component.html
@@ -38,7 +38,13 @@
     </div>
     <div class="container" fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column"></div>
   </mat-card-content>
-  <div *midasHasPermission="'POS_UPDATE'" fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column" [formGroup]="formFilter">
+  <div
+    *midasHasPermission="'POS_UPDATE'"
+    fxLayout="row wrap"
+    fxLayoutGap="2%"
+    fxLayout.lt-md="column"
+    [formGroup]="formFilter"
+  >
     <mat-form-field fxFlex="18%" *midasHasPermission="'ALL_FUNCTIONS'">
       <mat-label>Chi nhánh</mat-label>
       <input matInput type="text" (blur)="getBookingInternal()" formControlName="officeName" />
@@ -46,10 +52,8 @@
 
     <mat-form-field fxFlex="18%">
       <mat-label>Nhân viên</mat-label>
-      <input matInput type="text" (blur)="getBookingInternal()" formControlName="staffName"  />
-
+      <input matInput type="text" (blur)="getBookingInternal()" formControlName="staffName" />
     </mat-form-field>
-
   </div>
   <mat-card-content style="margin-top: 10px">
     <mat-card>
@@ -114,7 +118,7 @@
 
       <ng-container matColumnDef="getBookedAmount">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Đã chi</th>
-        <td mat-cell *matCellDef="let booking">{{ booking.totalPaid | money }}</td>
+        <td mat-cell *matCellDef="let booking">{{ booking?.totalPaid | money }}</td>
       </ng-container>
 
       <ng-container matColumnDef="officeName">
@@ -141,10 +145,14 @@
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Hành động</th>
         <td mat-cell *matCellDef="let booking">
-          <button mat-mini-fab color="primary" (click)="transferBookingInternal(booking)">
+          <button
+            *ngIf="booking.totalPaid < booking.totalBooking"
+            mat-mini-fab
+            color="primary"
+            (click)="transferBookingInternal(booking)"
+          >
             <mat-icon title="Thực hiện chi tiền "> gavel </mat-icon>
           </button>
-
         </td>
       </ng-container>
 
