--- a/src/app/booking-manage/view-internal-booking/branch-booking-tab/branch-booking-tab.component.html
+++ b/src/app/booking-manage/view-internal-booking/branch-booking-tab/branch-booking-tab.component.html
@@ -57,10 +57,10 @@
             <span style="font-size: 20px; margin-top: 8px; padding-top: 5px">{{
               staffBookingInfo?.totalAmountFromBooking | money
             }}</span>
-            <span>&nbsp;Đã nhận</span>
+            <span>&nbsp;Đã chi</span>
           </div>
         </div>
-        <div fxLayout="row wrap" fxFlex="20%" class="container m-b-20">
+        <!-- <div fxLayout="row wrap" fxFlex="20%" class="container m-b-20">
           <img src="assets/images/icons/capital.svg" />
           <div style="display: flex" fxLayout="column">
             <span style="font-size: 20px; margin-top: 8px; padding-top: 5px">{{
@@ -68,12 +68,13 @@
             }}</span>
             <span>&nbsp;Đã giao dịch</span>
           </div>
-        </div>
+        </div> -->
         <div fxLayout="row wrap" fxFlex="20%" class="container m-b-20">
           <img src="assets/images/icons/pnlAmount.svg" />
           <div style="display: flex" fxLayout="column">
             <span style="font-size: 20px; margin-top: 8px; padding-top: 5px">
-              {{ staffBookingInfo?.totalAmountRemain | money }}
+              <!-- {{ staffBookingInfo?.totalAmountRemain | money }} -->
+              {{ staffBookingInfo?.totalAmountBooking - staffBookingInfo?.totalAmountFromBooking | money }}
             </span>
             <span>&nbsp;Còn lại</span>
           </div>
@@ -105,6 +106,11 @@
         <td mat-cell *matCellDef="let booking">{{ booking.totalPaid | money }}</td>
       </ng-container>
 
+      <ng-container matColumnDef="needBookedAmount">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Cần chi</th>
+        <td mat-cell *matCellDef="let booking">{{ booking.totalBooking - booking.totalPaid | money }}</td>
+      </ng-container>
+
       <ng-container matColumnDef="officeName">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Chi nhánh</th>
         <td mat-cell *matCellDef="let booking">
@@ -129,10 +135,18 @@
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Hành động</th>
         <td mat-cell *matCellDef="let booking">
-          <button mat-mini-fab color="primary" (click)="transferBookingInternal(booking)">
-            <mat-icon title="Thực hiện chi tiền "> gavel </mat-icon>
+          <button mat-mini-fab color="default"  (click)="showDetailBooking(booking.bookingRefNo)">
+            <mat-icon title="Xem chi tiết "> remove_red_eye </mat-icon>
           </button>
 
+          <button
+            *ngIf="booking.totalPaid < booking.totalBooking"
+            mat-mini-fab
+            color="primary"
+            (click)="transferBookingInternal(booking)"
+          >
+            <mat-icon title="Thực hiện chi tiền "> gavel </mat-icon>
+          </button>
         </td>
       </ng-container>
 
