--- a/src/app/home/customerbanner/customerbanner.component.html
+++ b/src/app/home/customerbanner/customerbanner.component.html
@@ -5,11 +5,11 @@
             <div class="sign">
                 <span class="sign__word  p-l-20" style="font-size: 1rem;">
                     <h1>{{'Home_Component.welcome'| translate}} <strong>{{this.childBannerData.userName}}</strong>! </h1>
-                
+
                 </span>
 
             </div>
-        
+
             <div fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign="center center" fxLayoutGap="5%"
                 class=" p-l-20 p-t-15">
 
@@ -17,18 +17,18 @@
                     <i class="fas fa-user-plus"></i>&nbsp;
                     {{'Home_Component.btnNewCustomer'| translate}}
                 </a>
-                <a class="link" [routerLink]="['/groups/create']" [queryParams]="{go_back:'home'}">
+                <!-- <a class="link" [routerLink]="['/groups/create']" [queryParams]="{go_back:'home'}">
                     <i class="fab fa-google-plus-g"></i>&nbsp;
                     {{'Home_Component.btnNewGroup'| translate}}
-                </a>
+                </a> -->
             </div>
 
 
         </div>
         <div class="sign">
             <span class="sign__word">{{this.childBannerData.title}}:</span>
-            
-            
+
+
             <!-- <span class="sign__word">festival</span>
       <span class="sign__word">today</span> -->
         </div>
