hide menu terminal

--- a/src/app/core/shell/toolbar/menu/menu.component.html
+++ b/src/app/core/shell/toolbar/menu/menu.component.html
@@ -19,7 +19,7 @@
       <!-- {{ "Toolbar_Component.labelInstitution" | translate }} -->
     </button>
 
-    <button
+    <!-- <button
       color="accent"
       mat-mini-fab
       [matMenuTriggerFor]="POSPartnerMenu"
@@ -28,8 +28,7 @@
       matTooltipPosition="before"
     >
       <i class="fas fa-sim-card"></i>
-      <!-- máy bán hàng và đối tác -->
-    </button>
+    </button> -->
 
     <button
       color="accent"
