Revert "hide menu terminal"
This reverts commit 8ad5ebb9182a5a8ff62f5d17ab17da4d75c45241.

--- a/src/app/core/shell/sidenav/sidenav.component.html
+++ b/src/app/core/shell/sidenav/sidenav.component.html
@@ -198,10 +198,10 @@
           <a matLine>{{ "Toolbar_Component.labelInstitution" | translate }}</a>
         </mat-list-item>
 
-        <!-- <mat-list-item class="tab-link" [matMenuTriggerFor]="POSPartnerMenu" #POSPartnerMenuTrigger="matMenuTrigger">
+        <mat-list-item class="tab-link" [matMenuTriggerFor]="POSPartnerMenu" #POSPartnerMenuTrigger="matMenuTrigger">
           <mat-icon matListIcon><i class="fas fa-hands-helping"></i></mat-icon>
           <a matLine>máy bán hàng và đối tác</a>
-        </mat-list-item> -->
+        </mat-list-item>
         <mat-list-item class="tab-link" [matMenuTriggerFor]="transactionMenu" #transactionMenuTrigger="matMenuTrigger">
           <mat-icon matListIcon><i class="fas fa-money-check-alt"></i></mat-icon>
           <a matLine>Giao dịch</a>
