--- a/src/app/core/shell/toolbar/toolbar.component.html
+++ b/src/app/core/shell/toolbar/toolbar.component.html
@@ -63,7 +63,7 @@
       <i class="fas fa-clipboard-list"></i>
     </button> -->
 
-    <!-- <button
+    <button
       mat-mini-fab
       [matMenuTriggerFor]="POSPartnerMenu"
       #POSPartnerMenuTrigger="matMenuTrigger"
@@ -71,7 +71,7 @@
       tourAnchor="toolbar-2-5"
     >
       <i class="fas fa-hands-helping"></i>
-    </button> -->
+    </button>
 
     <button mat-mini-fab [routerLink]="['/checker-inbox-and-tasks/checker-inbox']" matTooltip="Phê duyệt">
       <i class="fa fa-check"></i>
